2009-08-12  Yong Li  <yong.li@torchmobile.com>

        Reviewed by Eric Seidel.

        WINCE PORT: implement Cursor for WINCE. There's no real cursor on most
        WinMob devices. We pass the cursor info to application, which so that 
        can determine what to do.
        https://bugs.webkit.org/show_bug.cgi?id=27543

        * platform/wince/CursorWince.cpp: Added.

2009-08-12  Yong Li  <yong.li@torchmobile.com>

        Reviewed by George Staikos.

        WINCE PORT: MIMETypeRegistry
        https://bugs.webkit.org/show_bug.cgi?id=27543

        * platform/wince/MIMETypeRegistryWince.cpp: Added.

2009-08-12  Joe Mason  <joe.mason@torchmobile.com>

        Reviewed by George Staikos.

        WINCE PORT: Pasteboard and SearchPopupMenu
        https://bugs.webkit.org/show_bug.cgi?id=27543

        * platform/wince/PasteboardWince.cpp: Added.
        * platform/wince/SearchPopupMenuWince.cpp: Added.

2009-08-12  Yong Li  <yong.li@torchmobile.com>

        Reviewed by George Staikos.

        WINCE PORT: Add SharedTimerWince.cpp and SystemTimeWince.cpp
        https://bugs.webkit.org/show_bug.cgi?id=27543

        * platform/wince/SharedTimerWince.cpp: Added.
        * platform/wince/SystemTimeWince.cpp: Added.

2009-08-12  Mark Mentovai  <mark@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=28204
        Allow C++ exceptions to be disabled in WebCore's V8 Mac build.

        * WebCorePrefix.h:
        Only undefine |try| and |catch| when building Objective-C[++],
        leaving the C++ library definitions intact for C++.

2009-08-12  Nate Chapin  <japhet@chromium.org>

        Reviewed by Adam Barth.

        Add a Custom Setter for DOMWindowEvent in the V8 bindings.
        https://bugs.webkit.org/show_bug.cgi?id=27719

        Tests: fast/events/set-event-in-another-frame.html
               fast/events/set-event-to-null.html
