@@ -1,5 +1,15 @@
 2009-08-12  Yong Li  <yong.li@torchmobile.com>
 
+        Reviewed by George Staikos.
+
+        WINCEPORT: FileSystem and FileChooser
+        https://bugs.webkit.org/show_bug.cgi?id=27543
+
+        * platform/wince/FileChooserWince.cpp: Added.
+        * platform/wince/FileSystemWince.cpp: Added.
+
+2009-08-12  Yong Li  <yong.li@torchmobile.com>
+
         Reviewed by Eric Seidel.
 
         WINCE PORT: implement Cursor for WINCE. There's no real cursor on most
